# lopetools

./: .gitignore  .gitmodules  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: senseid_to_metadata.json
notebooks/: langchain.ipynb  openai.ipynb  ptt-weaviate.ipynb
scripts/: weaviate_backup.py
src/: start-agent.sh
src/api/: __init__.py  main.py  start-tagger.sh  types.py
src/api/tagger/: __init__.py  main.py  schemas.py
src/api/v1/: endpoints.py
src/api/v1/routers/: agent.py  agents.py  tagger.py
src/lc_tools/: agents.py  lope_tools.py  mytypes.py
src/tagger/: main.py
src/tagger_api/: main.py
web/: Dockerfile.frontend  next.config.js  package-lock.json  package.json
web/components/ChatHistory/: ChatHistory.tsx
web/components/ColorSchemeToggle/: ColorSchemeCounterContext.tsx  ColorSchemeToggle.tsx
web/components/LopeGptForm/: LopeGptForm.tsx
web/components/MyAppShell/: MyAppShell.tsx
web/pages/: _app.tsx  index.tsx
web_streamlit/: streamlit_app.py
web_streamlit/.streamlit/: config.toml
