[tool.poetry]
name = "lopetools"
version = "0.1.0"
description = "LOPE tools for Langchain"
authors = ["dachenlian <cclemon.lian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
CwnGraph = {path = "./src/CwnGraph", develop = false}
fastapi = "^0.97.0"
loguru = "^0.7.0"
pydantic = "^1.10.9"
torch = {version = "^2.0.1", source = "torch"}
numpy = "^1.24.3"
transformers = "^4.30.2"
gdown = "^4.7.1"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
langchain = "^0.0.201"
sentence-transformers = "^2.2.2"
httpx = "^0.24.1"
OpenCC = "^1.1.6"
walrus = "^0.9.2"
DistilTag = "^0.2.2"
nltk = "^3.8.1"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
openai = "^0.27.8"
tiktoken = "^0.4.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
